[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/ui/shared/cursor.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/fonts/aldo_the_apache/AldotheApache.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/ui/win_screen/scripts/win_screen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 250
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "appear"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2.4 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -333.0
margin_top = 58.0
margin_right = 331.0
margin_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 454, 104 )
custom_fonts/font = SubResource( 3 )
text = "YOU WON!"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -647.0
margin_top = 273.5
margin_right = 645.0
margin_bottom = 792.5
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 454, 104 )
custom_fonts/font = SubResource( 11 )
text = "You reached WAVE 20, CONGRATS!

YOU CAN CONTINUE UNTIL
YOU INEVITABLY DIE..

THANKS FOR PLAYING!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -311.0
margin_top = -380.0
margin_right = 311.0
margin_bottom = -276.0
custom_constants/separation = 25

[node name="ContinueBtn" type="Button" parent="HBoxContainer"]
margin_right = 298.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
text = "CONTINUE"

[node name="QuitBtn" type="Button" parent="HBoxContainer"]
margin_left = 323.0
margin_right = 622.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/RESET = SubResource( 10 )
anims/appear = SubResource( 9 )
anims/disappear = SubResource( 12 )

[node name="Cursor" parent="." instance=ExtResource( 1 )]
position = Vector2( 350, 707 )

[connection signal="focus_entered" from="HBoxContainer/ContinueBtn" to="." method="_on_ContinueBtn_focus_entered"]
[connection signal="pressed" from="HBoxContainer/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="focus_entered" from="HBoxContainer/QuitBtn" to="." method="_on_QuitBtn_focus_entered"]
[connection signal="pressed" from="HBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
